--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
         <link rel="manifest" href="favicons/site.webmanifest">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Sahil Garje</title>
     </head>
 
