--- a/index.html
+++ b/index.html
@@ -19,19 +19,22 @@
         <div class="container mt-5">
             <div class="row align-items-center">
                 <div class="col-md-3 text-center">
-                <img src="profile-image.jpg" alt="Profile Image" class="profile-image">
+                    <img src="profile-image.jpg" alt="Profile Image" class="profile-image">
                 </div>
-            <div class="col-md-9">
-                <h1>Sahil Garje</h1>
-                <nav>
-                <ul class="list-inline">
-                    <li class="list-inline-item"><a href="index.html">Home</a></li>
-                    <li class="list-inline-item"><a href="projects.html">Projects</a></li>
-                    <li class="list-inline-item"><a href="posts.html">Posts</a></li>
-                    <li class="list-inline-item"><a href="contact.html">Contact</a></li>
-                </ul>
-                </nav>
-            </div>
+                <div class="col-md-9">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h1>Sahil Garje</h1>
+                        <img src="themeIcons/moon.png" id="themeicon" alt="Theme Toggle Icon">
+                    </div>
+                    <nav>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><a href="index.html">Home</a></li>
+                            <li class="list-inline-item"><a href="projects.html">Projects</a></li>
+                            <li class="list-inline-item"><a href="posts.html">Posts</a></li>
+                            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
 
@@ -49,6 +52,6 @@
             <p>Fiction in <u>any</u> form, be it animation, books, games, or drama.</p>
             <p>I absolutely love thinking about existentialism, nihilism, absurdism, stoicism and other philosophies!</p>
         </div>
-
+        <script src='script.js'></script>
     </body>
 </html>
