Fixed bugs and updated profile

--- a/index.html
+++ b/index.html
@@ -17,27 +17,28 @@
 
     <body>
         <div class="container mt-5">
-            <div class="row align-items-center">
-                <div class="col-md-3 text-center">
-                    <img src="profile-image.jpg" alt="Profile Image" class="profile-image">
-                </div>
-                <div class="col-md-9">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h1>Sahil Garje</h1>
-                        <img src="themeIcons/moon.png" id="themeicon" alt="Theme Toggle Icon">
-                    </div>
-                    <nav>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a href="index.html">Home</a></li>
-                            <li class="list-inline-item"><a href="projects.html">Projects</a></li>
-                            <li class="list-inline-item"><a href="posts.html">Posts</a></li>
-                            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+    <div class="row align-items-center">
+        <!-- Profile Image Section -->
+        <div class="col-md-3 text-center">
+            <img src="profile-image.jpg" alt="Profile Image" class="profile-image">
         </div>
-
+        <!-- Header and Navigation Section -->
+        <div class="col-md-9">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1 class="profile-name">Sahil Garje</h1>
+                <img src="themeIcons/moon.png" id="themeicon" alt="Theme Toggle Icon">
+            </div>
+            <nav>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="projects.html">Projects</a></li>
+                    <li class="list-inline-item"><a href="posts.html">Posts</a></li>
+                    <li class="list-inline-item"><a href="links.html">Links</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
         <div class = "container left">
             <h3>About Me</h3>
             <p>I am a nerd living my dream life, watching anime, movies, and other 'stuff', all while studying my favorite tech subjects.</p>
