--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1>Sahil Garje</h1>
+                        <h1 class="profile-name">Sahil Garje</h1>
                         <img src="themeIcons/moon.png" id="themeicon" alt="Theme Toggle Icon">
                     </div>
                     <nav>
@@ -31,7 +31,7 @@
                             <li class="list-inline-item"><a href="index.html">Home</a></li>
                             <li class="list-inline-item"><a href="projects.html">Projects</a></li>
                             <li class="list-inline-item"><a href="posts.html">Posts</a></li>
-                            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                            <li class="list-inline-item"><a href="links.html">Links</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -41,7 +41,18 @@
 
         <div class="container mt-5">
             <div class="row">
-                <!-- Card 1 -->
+		<!-- Card 1 -->
+                <div class="col-md-6">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="kubrick.png" class="card-img-top" alt="Project Kubrick">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text">A Hugging Face Space using Gradio for interfacing with a cosine similarity-based movie recommendation model.</p>
+                            <a href="https://huggingface.co/spaces/sahilgarje/Kubrick" class="btn btn-dark">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2 -->
                 <div class="col-md-6">
                     <div class="card mb-4 shadow-sm">
                         <img src="textmonger.png" class="card-img-top" alt="Project Text Monger">
@@ -52,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Card 2 -->
+                <!-- Card 3 -->
                 <div class="col-md-6">
                     <div class="card mb-4 shadow-sm">
                         <img src="peanutbutter.png" class="card-img-top" alt="Project MrPeanutButter_Bot">
@@ -63,7 +74,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Card 3 -->
+                <!-- Card 4 -->
                 <div class="col-md-6">
                     <div class="card mb-4 shadow-sm">
                         <img src="archlinux.png" class="card-img-top" alt="Project The LiZard Witchy">
@@ -71,6 +82,17 @@
                             <h5 class="card-title">The LiZard Witchy</h5>
                             <p class="card-text">A website I created using HTML/CSS and Javascript that contains configs/tweaks and acts as a general guide for a minimal & functional Arch + i3wm setup.</p>
                             <a href="https://oceanthunder.github.io/lizardwitchy/" class="btn btn-dark">View Project</a>
+                        </div>
+                    </div>
+                </div>
+		<!-- Card 5 -->
+                <div class="col-md-6">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="ponpon.png" class="card-img-top" alt="Project Ponpon Shit">
+                        <div class="card-body">
+                            <h5 class="card-title">Ponpon Shit: An Edgerunner's Summary</h5>
+                            <p class="card-text">A scratch project I made that summarizes the anime 'Cyberpunk Edgerunners' in an animated and satirical way.</p>
+                            <a href="https://youtu.be/rogfSJwxPqU?feature=shared" class="btn btn-dark">View Project</a>
                         </div>
                     </div>
                 </div>
