--- a/posts.html
+++ b/posts.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1>Sahil Garje</h1>
+                        <h1 class="profile-name">Sahil Garje</h1>
                         <img src="themeIcons/moon.png" id="themeicon" alt="Theme Toggle Icon">
                     </div>
                     <nav>
@@ -31,7 +31,7 @@
                             <li class="list-inline-item"><a href="index.html">Home</a></li>
                             <li class="list-inline-item"><a href="projects.html">Projects</a></li>
                             <li class="list-inline-item"><a href="posts.html">Posts</a></li>
-                            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+                            <li class="list-inline-item"><a href="links.html">Links</a></li>
                         </ul>
                     </nav>
                 </div>
