Fixed Kubrick's card

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                     <div class="card mb-4 shadow-sm">
                         <img src="kubrick.png" class="card-img-top" alt="Project Kubrick">
                         <div class="card-body">
-                            <h5 class="card-title"></h5>
+                            <h5 class="card-title">Kubrick</h5>
                             <p class="card-text">A Hugging Face Space using Gradio for interfacing with a cosine similarity-based movie recommendation model.</p>
                             <a href="https://huggingface.co/spaces/sahilgarje/Kubrick" class="btn btn-dark">View Project</a>
                         </div>
